--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-236.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-309.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-157.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.73MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-659.8KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-407.2KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇸🇬 新加坡-3.78MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-23.15MB/s(Youtube:不良林), server: 20.239.88.144, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 20.239.88.144}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-659.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
