--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-236.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-309.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.73MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-6.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇸🇬 新加坡-3.78MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-23.15MB/s(Youtube:不良林), server: 20.239.88.144, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 20.239.88.144}}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 167.88.62.68, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 167.88.62.68, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇬🇧 英国-1.14MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-3.14MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-236.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
